// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeEmptyArray should return false for  1`] = `
"    
    expected should be an empty array.
    got: string
"
`;

exports[`testing toBeEmptyArray should return false for [ '' ] 1`] = `
"    
    expected should be an empty array.
    got: expected.length == 1
"
`;

exports[`testing toBeEmptyArray should return false for 1 1`] = `
"    
    expected should be an empty array.
    got: number
"
`;

exports[`testing toBeEmptyArray should return false for empty array when isNot true 1`] = `
"    
    expected should not be an empty array.
    got: expected.length == 0
"
`;
